toggler burger correction and overlapping coorection hence it may increase user experince revised

--- a/administrator/templates/atum/scss/blocks/_toolbar.scss
+++ b/administrator/templates/atum/scss/blocks/_toolbar.scss
@@ -439,7 +439,17 @@ joomla-toolbar-button {
 
 @include media-breakpoint-down(xs) {
   .toggler-toolbar {
-    top: 60px;
+    top: 20px;
+    display: block;
+    width: 70px;
+    height: 70px;
+    background: var(--atum-link-color);
+    border-radius: 40px;
+    border: 8px solid var(--atum-bg-light);
+    position: fixed;
+    bottom: 20px;
+    right: 10px;
+    z-index: 1030;
 
     .toggler-toolbar-icon::before {
       font: normal normal normal 30px/1 'Font Awesome 5 Free';
